# duckdb_inferal_relay

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: build.yml
src/: context.cpp  http.cpp  inferal_relay_extension.cpp  members.cpp  mock_http.cpp  parser.cpp  schema.cpp  secrets.cpp  sync.cpp  url_builder.cpp
src/include/: context.hpp  http.hpp  inferal_relay_extension.hpp  members.hpp  mock_http.hpp  parser.hpp  schema.hpp  secrets.hpp  sync.hpp  url_builder.hpp
test/sql/: inferal_relay.test  mock_sync.test
